fix tasks overflow

--- a/app/styles/components/pages/deals/_dashboard.scss
+++ b/app/styles/components/pages/deals/_dashboard.scss
@@ -29,12 +29,6 @@ $col-padding: 20px;
     }
   }
 
-  .deal-tasks-container {
-    width: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-
   .deal-tasks {
     @extend %deal-tasks;
   }
