--- a/app/styles/components/pages/deals/dashboard/_tasks.scss
+++ b/app/styles/components/pages/deals/dashboard/_tasks.scss
@@ -1,7 +1,8 @@
 %deal-tasks {
   padding: $col-padding !important;
   background: #fbfbfb;
-  transition: 0.4s width ease-in;
+  overflow: scroll !important;
+  // transition: 0.4s width ease-in;
   .section {
     @extend %deal-task-section;
   }
